[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runmix"
version = "0.1.0"
description = "Multi-language code execution against a real directory for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "slaps.dev" }]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/runmix"]

[tool.hatch.build.targets.sdist]
include = ["src/runmix", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
